===============================================================
Tag name:  rtm1_0_05
Originator(s): mvertens
Date: Sep 23, 2012
One-line Summary: bugfix for rtm history restarts files using pnetcdf

fixed reference to finc and fexcl - plus other minor cleanups	

M       src/riverroute/RtmMod.F90
M       src/riverroute/RtmHistFile.F90
M       src/cpl_esmf/rof_comp_esmf.F90
	
===============================================================
Tag name:  rtm1_0_04
Originator(s): tcraig
Date: Sep 13, 2012
One-line Summary: updates from clm4_0_44 to clm4_0_46 for rtm

M       bld/namelist_files/namelist_defaults_rtm.xml
M       src/riverroute/RtmMod.F90
===============================================================
Tag name:  rtm1_0_03
Originator(s): tcraig
Date: Mon Sep 4, 2012
One-line Summary: add budget check, minor cleanup

M       src/cpl_mct/rof_comp_mct.F90
M       src/riverroute/RtmMod.F90
M       src/riverroute/RunoffMod.F90
	
===============================================================
Tag name:  rtm1_0_02
Originator(s): tcraig
Date: Mon Aug 27, 2012
One-line Summary: Clean up, flood_present=false, remove land_frac
  usage, fix sign convention, set mask global, fix multi-instance,
  fix esmf.

M       src/cpl_share/rtm_cpl_indices.F90
M       src/cpl_mct/rof_comp_mct.F90
M       src/riverroute/RtmMod.F90
M       src/riverroute/RtmIO.F90
M       src/riverroute/RunoffMod.F90
M       src/cpl_esmf/rof_comp_mct.F90
M       src/cpl_esmf/rof_comp_esmf.F90
===============================================================
Tag name:  rtm1_0_01
Originator(s): mvertens (Mariana Vertenstein)
Date: Mon Aug 4
One-line Summary: First commit of rtm as a separate component

Purpose of changes:

First commit of rtm as a separate component

Requirements for tag:
    Requirements: test on bluefire (CESM)

Test level of tag: std-test

Bugs fixed (include bugzilla ID):

Known bugs (include bugzilla ID):
	
Known Limitations:
	
Describe any changes made to build system: 